samples/_failures_safe/1761274728_59bdbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae4abed4.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_ae4abed4.c:139:15: error: expected ‘;’ at end of input
  139 |             op
      |               ^
      |               ;
./samples/SAFE/__tmp_ae4abed4.c:139:13: error: expected declaration or statement at end of input
  139 |             op
      |             ^~
./samples/SAFE/__tmp_ae4abed4.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ae4abed4.c:139:13: error: expected declaration or statement at end of input
